--- a/.htaccess
+++ b/.htaccess
@@ -59,4 +59,4 @@ RewriteRule (.*) https://%{HTTP_HOST}%{REQUEST_URI} [R=301,L]
   # AddHandler application/x-httpd-ea-php74 .php .php7 .phtml
 </IfModule>
 # php -- END cPanel-generated handler, do not edit
-AddType application/x-httpd .php
+#AddType application/x-httpd .php
