--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
 # THÔNG TIN KẾT NỐI CSDL
 DB_HOST=localhost
-DB_DATABASE=benboits_shop
-DB_USERNAME=benboits_shop
-DB_PASSWORD=thanhben01
+DB_DATABASE=shopclone
+DB_USERNAME=root
+DB_PASSWORD=
 
 # THÔNG TIN GIẤY PHÉP KÍCH HOẠT WEBSITE
 SECRET_KEY=v1.shopmmo.vip
